# PCV1

./: .gitignore  .replit  README.md  design_guidelines.md  package-lock.json  package.json  pyproject.toml
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  approval.py  env_counter.py  envelope.py  line_item.py  receipt.py
backend/app/pdf/: __init__.py  render.py
backend/app/pdf/templates/: envelope.html
backend/app/routes/: _schemas.py  drafts.py  envelopes.py  receipts.py
backend/app/services/: __init__.py  env_number.py  storage.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: ActionBar.tsx  EnvelopeHeader.tsx  GLSummary.tsx  InstructionsBanner.tsx  TransactionTable.tsx  UserSelector.tsx
client/src/components/examples/: ActionBar.tsx  EnvelopeHeader.tsx  GLSummary.tsx  InstructionsBanner.tsx  TransactionTable.tsx  UserSelector.tsx
client/src/pages/: PettyCashEnvelope.tsx
frontend/: index.html  node_modules  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ApprovalsBlock.tsx  CodingStrip.tsx  EnvelopeHeader.tsx  LineGrid.tsx  ReceiptUploader.tsx  SubmitBar.tsx  TotalsPanel.tsx
frontend/src/pages/: NewEnvelopePage.tsx  ViewEnvelopePage.tsx
shared/: schema.ts
